dodanie logiki lokalizacji
Implementacja systemu lokalizacji siłowni:
Dodano warstwę biznesową: encja GymLocation, repozytorium, serwis oraz LocationController.
Rozszerzono model GymClass oraz GymClassDTO o powiązania z lokalizacją (nazwa, adres, miasto).
Zaktualizowano proces tworzenia zajęć o wymagany parametr locationId.

Optymalizacja i rozdzielenie endpointów:

Wprowadzono dedykowane ścieżki filtrowania: /api/classes/by-date oraz /api/classes/location/{id} (rozwiązanie konfliktów mapowania).
Dodano obsługę błędów przy nakładaniu się terminów zajęć w danej lokalizacji.
Zaktualizowano SecurityConfig o dostęp do nowych zasobów lokalizacyjnych.
Uzupełniono dokumentację Swagger (@Operation) dla wszystkich nowych funkcjonalności.